2000-12-06  Ken Raeburn  <raeburn@mit.edu>

	* krlogind.c (doit): Cast first argument to pty_make_sane_hostname
	to sockaddr pointer.
	* krshd.c (doit): Likewise.

2000-11-01  Ezra Peisach  <epeisach@mit.edu>

	* configure.in: Update to autoconf 2 macro names:
	AC_FORK->AC_FUNC_VFORK, AC_CONST->AC_C_CONST, AC_HEADER_CHECK ->
	AC_CHECK_HEADER. In addition, conditionally use internal
	AC_PROG_ECHO_N (autoconf 2.12) or _AC_PROG_ECHO (autoconf 2.49)
	depending on which is defined.

2000-10-12  Ezra Peisach  <epeisach@mit.edu>

	* login.c (k5_get_password): Declare second argument as unsigned
	int length.

Tue Oct 10 04:59:04 2000  Ezra Peisach  <epeisach@mit.edu>

	* kcmd.c (kcmd): Use krb5_set_principal_realm() instead of freeing the
	principals realm data and mucking with it ourselves.

2000-10-03  Ezra Peisach  <epeisach@mit.edu>

	* krlogin.c (main): Declare main as int.

2000-09-08  Ken Raeburn  <raeburn@mit.edu>

	* Makefile.in (DEFINES): Define HEIMDAL_FRIENDLY.
	* krlogind.c (recvauth): Don't complain about a subkey sent for
	KCMDV0.1 if HEIMDAL_FRIENDLY is defined, just quietly ignore it.
	* krshd.c (recvauth): Likewise.

Tue Aug  8 13:38:22 2000  Ezra Peisach  <epeisach@mit.edu>

	* krlogin.c (read_wrapper): Copy from the current point and not
 	the start of the cached buffer.

2000-07-21  Peter S Litwack  <plitwack@mit.edu>

	* krlogin.c (writer): Improved bandwith efficiency by reading 
        and sending more than one character at a time if multiple 
        characters are available to be read from the terminal.
        * krlogin.c (read_wrapper): Added this function as a helper
        to writer.  It facilitates checking for escape sequences 
        (~^Z etc.) when reading mulitple characters at a time.

2000-07-18  Ezra Peisach  <epeisach@mit.edu>

	* krcp.c: Provide format attribute for error() for versions of gcc
	that support it.

	* configure.in (LOGINLIBS): Test for crypt() in crypt library only
	modifies LOGINLIBS.
